--- a/template_styles.css
+++ b/template_styles.css
@@ -263,9 +263,6 @@ h6, .h6 {
   color: #fff;
   background: #619F49;
   border-radius: 5px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .button:hover {
@@ -303,9 +300,6 @@ h6, .h6 {
   width: 40px;
   height: 10px;
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: url(images/arrow.svg) no-repeat right center;
 }
@@ -344,9 +338,6 @@ h6, .h6 {
   outline: none;
   cursor: pointer;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .slick-arrow:before {
@@ -400,9 +391,6 @@ ul.slick-dots li {
   color: #212121;
   text-align: center;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 ul.slick-dots li:hover, ul.slick-dots li.slick-active {
@@ -507,9 +495,6 @@ ul.slick-dots li button {
   height: 0;
   overflow: hidden;
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease 0s;
-  -moz-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
 }
 
@@ -542,9 +527,6 @@ ul.slick-dots li button {
   vertical-align: middle;
   display: inline-block;
   border-bottom: 2px solid transparent;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .tab_buttons span:last-child, .tab_buttons a:last-child {
@@ -570,9 +552,6 @@ ul.slick-dots li button {
   display: block;
   text-decoration: none;
   color: #DBDBDB;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .pagination ul li a.activ, .pagination ul li a:hover {
@@ -616,9 +595,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   top: 0;
   left: 0;
   z-index: 3;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 #header .page_width {
@@ -636,9 +612,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   float: left;
 }
 #logo a {
-  -webkit-transition: opacity 0.3s ease 0s;
-  -moz-transition: opacity 0.3s ease 0s;
-  -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
 }
 #logo a:hover {
@@ -728,9 +701,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 100%;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   overflow: hidden;
   background: no-repeat center top/cover;
@@ -745,7 +715,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   z-index: 2;
   color: #fff;
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   display: inline-block;
 }
@@ -877,9 +848,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   vertical-align: top;
   box-sizing: border-box;
   text-align: center;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .advantages_container .item .icon {
@@ -943,9 +911,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   box-sizing: border-box;
   text-align: center;
   z-index: 1;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item:first-child {
@@ -969,9 +934,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   width: 100%;
   top: 0;
   left: 0;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: radial-gradient(73.8% 73.8% at 50% 33.8%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.539) 100%);
 }
@@ -982,9 +944,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 .directions_container .item .name {
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   top: 0;
   pointer-events: none;
@@ -1000,9 +959,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 500px;
   padding: 60px 8% 60px 8%;
   text-align: left;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu h4 {
@@ -1015,9 +971,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   display: inline-block;
   position: relative;
   padding-left: 20px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu ul a::before {
@@ -1030,9 +983,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   box-sizing: border-box;
   border-radius: 50%;
   border: 1px solid #619F49;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions_container .item .direction_menu ul a::after {
@@ -1043,9 +993,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   width: 40px;
   height: 10px;
   position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   background: url(images/arrow.svg) no-repeat right center;
 }
@@ -1187,7 +1134,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   z-index: 2;
   color: #fff;
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   display: inline-block;
 }
@@ -1301,9 +1249,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   vertical-align: top;
   box-sizing: border-box;
   overflow: hidden;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item a {
@@ -1319,9 +1264,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   top: 0;
   left: 0;
   background: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item img {
@@ -1337,9 +1279,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   max-width: 270px;
   color: #fff;
   font-weight: 500;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item .more {
@@ -1349,9 +1288,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   font-weight: 500;
   color: #fff;
   letter-spacing: 0.03em;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .projects_container .item .more::after {
@@ -1400,7 +1336,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   height: 100%;
   top: 0;
   background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   width: 69px;
 }
 .project_images .main_slider .slick-arrow::before {
@@ -1553,11 +1490,7 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   margin: 0 20px 10px;
   line-height: 90px;
   text-align: center;
-  -webkit-filter: grayscale(1);
   filter: grayscale(1);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .partners_slider .item img {
@@ -1568,7 +1501,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   object-fit: contain;
 }
 .partners_slider .item:hover {
-  -webkit-filter: grayscale(0);
   filter: grayscale(0);
 }
 
@@ -1617,7 +1549,8 @@ body.compensate-for-scrollbar, .fancybox-enabled {
 }
 #main_form .form_block form {
   background: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   border-radius: 5px;
   max-width: 830px;
   margin: 0 auto;
@@ -1726,9 +1659,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   padding-left: 25px;
   display: inline-block;
   text-align: left;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .form_block input[type=checkbox]:not(checked) + label:before {
@@ -1750,9 +1680,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   position: absolute;
   left: 2px;
   top: 3px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   opacity: 0;
   border-left: 2px solid #212121;
@@ -1792,9 +1719,6 @@ body.compensate-for-scrollbar, .fancybox-enabled {
   color: #fff;
   cursor: pointer;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   border: 0;
   border-radius: 5px;
@@ -2166,9 +2090,6 @@ footer #dev {
   display: inline-block;
   vertical-align: top;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .numbers_slider .item .icon {
@@ -2201,9 +2122,6 @@ footer #dev {
 .description_slider .item {
   position: relative;
   box-sizing: border-box;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .description_slider .item .icon {
@@ -2266,9 +2184,6 @@ footer #dev {
   right: 0;
   opacity: 0;
   background-image: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%), url(zakladanie-ogrodow-Gliwice-Slask-4.jpg);
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions .item .img a img {
@@ -2283,9 +2198,6 @@ footer #dev {
   margin-left: -70px;
   bottom: -30px;
   color: #FFF;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .directions .item .img a .more:after {
@@ -2308,7 +2220,9 @@ footer #dev {
 .directions .item .text {
   background-color: #FFF;
 }
-.directions .item .text p {
+.directions .item .text a {
+  color: #212121;
+  display: block;
   margin-top: 20px;
   padding: 0 20px;
   text-align: center;
@@ -2428,7 +2342,8 @@ iframe {
   padding: 40px 60px 60px;
   border-radius: 5px;
   box-sizing: border-box;
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   background: rgba(0, 0, 0, 0.6);
   color: #FFF;
 }
@@ -2551,5 +2466,3 @@ iframe {
     padding-left: 30px;
   }
 }
-
-/*# sourceMappingURL=template_styles.css.map */
