--- a/css/scss/_base.scss
+++ b/css/scss/_base.scss
@@ -52,7 +52,7 @@ body {
     width: 100%;
     min-height: 100%;
     
-	//background:  url(images/site.jpg) no-repeat center top;
+	background:  url(images/site.jpg) no-repeat center top;
 	//background-size: 1920px auto;
 }
 
@@ -331,8 +331,8 @@ h6, .h6 {
 
 .slick-slider {
     position: relative;
-    margin: 0 -55px;
-    padding: 0 55px;
+    // margin: 0 -55px;
+    // padding: 0 55px;
     
     .slick-list {
 		margin: 0 -10px;
@@ -454,25 +454,25 @@ ul.slick-dots {
 }
 
 
-@media screen and (max-width: 1400px) {
-	.slick-slider {
-		margin: 0 -35px;
-        padding: 0 45px;
-	}
-}
+// @media screen and (max-width: 1400px) {
+// 	.slick-slider {
+// 		margin: 0 -35px;
+//         padding: 0 45px;
+// 	}
+// }
 
-@media screen and (max-width: 1200px) {
-	.slick-slider {
-		margin: 0 -20px;
-		//padding: 0 30px;
-	}
-}
+// @media screen and (max-width: 1200px) {
+// 	.slick-slider {
+// 		margin: 0 -20px;
+// 		//padding: 0 30px;
+// 	}
+// }
 
 @media screen and (max-width: 600px) {
-	.slick-slider {
-		margin: 0 -20px;
-		padding: 0 30px;
-    }
+	// .slick-slider {
+	// 	margin: 0 -20px;
+	// 	padding: 0 30px;
+    // }
     
     ul.slick-dots li {
         width: 6px;
@@ -482,9 +482,12 @@ ul.slick-dots {
 }
 
 .text {
+    h2 {
+        margin-bottom: 25px;
+    }
     ul {
         //counter-reset: ol_ounter;
-		margin-bottom: 40px;
+		margin-bottom: 25px;
 		padding-top: 4px;
         margin-left: -5px;
         
@@ -492,13 +495,14 @@ ul.slick-dots {
 			//margin-bottom: 10px;
             position: relative;
 			padding: 0px 0 0px 33px;
-			margin-bottom: 20px;
+			margin-bottom: 10px;
 			margin-left: 4px;
 			overflow: hidden;
             
             p{
                 position: relative;
                 z-index: 1;
+                margin-bottom: 0;
             }
 			&::before{
                 content: "";
