--- a/css/scss/_directions.scss
+++ b/css/scss/_directions.scss
@@ -188,10 +188,16 @@
 .directions_slider {
     padding-bottom: 50px;
 
+    .slick-list {
+        margin: 0 -15px;
+    }
+
     &.directions {
         margin-bottom: 102px;
     }
 }
+
+
 
 @media screen and (max-width: 1500px) {
     
@@ -214,5 +220,250 @@
 @media screen and (max-width: 450px) {
 
 }
+
+//start directions page//
+.directions{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 60px;
+    .item{
+        margin: 0 15px 30px;
+        width: calc(25% - 30px);
+       
+        .img{
+            position: relative;
+            border-radius: 5px;
+            overflow: hidden;
+            
+            a{
+                position: relative;
+                width: 100%;
+                height: 420px;
+                border-radius: 5px;
+                display: block;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+                    right: 0;
+                    opacity: 0;
+                    background-image: radial-gradient(64.37% 64.37% at 50% 35.63%, rgba(0, 0, 0, 0.21) 0%, rgba(0, 0, 0, 0.21) 0.01%, rgba(0, 0, 0, 0.7) 100%), url(zakladanie-ogrodow-Gliwice-Slask-4.jpg);
+                    @include transition(all);
+                }
+
+                img{
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                    opacity: 100%;
+                }
+                .more{    
+                    position: absolute;
+                    left: 50%;
+                    margin-left: -70px;
+                    bottom: -30px;
+                    color: #FFF;
+                    @include transition(all);
+    
+                    &:after{
+                        content: "";
+                        display: inline-block;
+                        margin-left: 10px;
+                        font-size: 21px;
+                        width: 40px;
+                        height: 10px;
+                        position: relative;
+                        filter: brightness(0.5) contrast(300%) invert(1);
+                        background: url(images/arrow.svg) no-repeat right center;
+                    }
+    
+                    
+                }
+
+                &:hover{
+                    &::before {
+                        opacity: 100%;
+                    }
+                    
+                    .more{
+                        bottom: 60px;
+                    }
+                }
+            }
+        }
+
+        .text{
+            background-color: #FFF;
+            p{
+                margin-top: 20px;
+                //padding: 0 20px;
+                text-align: center;
+                font-weight: 500;
+            }
+            a {
+                display: block;
+                color: $color_text;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1024px){
+    .directions .item{
+        width: calc( 33% - 30px);
+    }
+}
+@media screen and (max-width:900px){
+    .directions .item{
+        width: calc( 50% - 30px);
+    }
+}
+@media screen and (max-width:600px){
+    .directions .item{
+        width:100%;
+        margin: 0 0px 40px;
+    }
+}
+//end directions page//
+
+//start direction_ditails//
+.icon_bg{
+    position: relative;
+    &::after{
+        content: '';
+        width: 360px;
+        height: 360px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-image: url(images/about_logo.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .text_and_image{
+        position: relative;
+        z-index: 1;
+    }
+
+    &.text_block {
+        margin-bottom: -30px;
+    }
+}
+.middle{
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 55px;
+}
+
+.other_directions{
+    margin-top: 100px;
+    padding-bottom: 12px;
+}
+
+.top_gallery {
+    margin-bottom: 40px;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 209px;
+        height: 209px;
+        bottom: -80px;
+        right: -60px;
+        background: repeating-linear-gradient(-45deg, #FFF500, #FFF500 4px, transparent 0px, transparent 18px);
+    }
+
+    .images_slider {
+        margin: 0;
+        padding: 0;
+        border-radius: 5px;
+        overflow: hidden;
+
+        .slick-list {
+            margin: 0;
+        }
+    }
+
+    .counter_slider {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(3px);
+        border-radius: 0px 0px 5px 0px;
+        width: 230px;
+        padding: 40px 0 40px 60px;
+        //text-align: center;
+        .slick-list {
+            margin: 0;
+        }
+    }
+}
+main{
+    h2 + .text_and_image {
+        padding-top: 20px;
+    }
+}
+
+.gallery_slider {
+    padding-top: 5px;
+
+    .slick-list {
+        margin: 0 -15px;
+    }
+
+    .slick-arrow {
+        top: -63px;
+        left: auto;
+        margin: 0;
+        height: 20px;
+
+        &::before {
+            width: 16px;
+            height: 16px;
+            top: 3px;
+        }
+    }
+
+    .slick-prev {
+        right: 34px;
+    }
+    .slick-next {
+        right: 0px;
+    }
+
+    .item {
+        position: relative;
+        height: 380px;
+        overflow: hidden;
+        margin: 0 15px;
+
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        &.video {
+            &::before {
+                background-size: 180px 180px;
+            }
+        }
+    }
+}
+
+
+//end direction_ditails//
 
 /* end directions styles */
