--- a/css/scss/_projects.scss
+++ b/css/scss/_projects.scss
@@ -194,13 +194,7 @@
 
         &.video {
             &::before {
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                background: url(images/icon_play.svg) no-repeat center / 130px 130px;
+                background-size: 180px 180px;
             }
         }
     }
@@ -223,21 +217,25 @@
             height: 100%;
             object-fit: cover;
         }
-
         &.video {
             &::before {
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                background: url(images/icon_play.svg) no-repeat center / 70px 70px;
+                background-image: url(images/icon_play_small.svg);
             }
         }
     }
 }
 
+}
+.video {
+    &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: url(images/icon_play.svg) no-repeat center / 70px 70px;
+    }
 }
 .description {
     margin-left: 49%;
